--- a/src/web/resources/public/css/style.css
+++ b/src/web/resources/public/css/style.css
@@ -140,3 +140,22 @@ input#input {
 .other {
   color: #00c1e4;
 }
+
+
+
+
+
+
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #31363b
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color:#31363b;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: #31363b;
+}
